...
            }
            if (uiState.currentSession != null && uiState.previewRecords.isNotEmpty()) {
                FilledTonalButton(
                    onClick = onExportRequested,
                    enabled = true,
                ) {
                    Text(text = "导出当前记录")
                }
            }
            if ((uiState.currentSession != null && uiState.previewRecords.isNotEmpty()) ||
                uiState.importedFileInfo != null
            ) {
                OutlinedButton(
...
